Se modifico el footer

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -222,10 +222,10 @@
       <img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px">
     </div>
     <div>
-      <span>Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.</span>
+      <span class="copy">Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.</span>
     </div>
     <div>
-      <span>Siguenos en redes</span>
+      <span>Síguenos en redes</span>
       <img src="../Fotos_pagina/IG.png" alt="" width="25px" height="25px">
       <img src="../Fotos_pagina/Whats.png" alt="" width="25px" height="25px">
     </div>
