Se agrego la descripción del proyecto y se ajusto el margen del grid-container

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -45,6 +45,7 @@
       <img src="../Fotos_nosotros/lore.jpeg" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Lorena Rodríguez</h5>
+        <h6>Developer Team</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/lorerzd" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
@@ -67,6 +68,7 @@
       <img src="../Fotos_nosotros/Adrian.png" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Adrian Arguello</h5>
+        <h6>Developer Team</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/lorerzd" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
@@ -88,6 +90,7 @@
       <img src="../Fotos_nosotros/ivan.jpg" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Ivan Campos</h5>
+        <h6>Developer Team</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/IvanCC11" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
@@ -109,6 +112,7 @@
       <img src="../Fotos_nosotros/eduardo.jpeg" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Eduardo Cruz</h5>
+        <h6>Developer Team</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/EdWrite" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
@@ -130,6 +134,7 @@
       <img src="../Fotos_nosotros/Johanna2.png" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Johanna Villegas</h5>
+        <h6>Developer Team</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/BestiaDesign" target="_blank" class="card-link"><img
@@ -152,6 +157,7 @@
       <img src="../Fotos_nosotros/josue.jpg" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Josue Torres</h5>
+        <h6>SCRUM Master</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/JosueTo" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
@@ -174,6 +180,7 @@
       <img src="../Fotos_nosotros/Maria.png" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">María González</h5>
+        <h6>Developer Team</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/Maria-Glz" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
@@ -195,6 +202,7 @@
       <img src="../Fotos_nosotros/Memo.png" class="card-img-top" alt="..." width="286px" height="286px">
       <div class="card-body">
         <h5 class="card-title">Guillermo Basto</h5>
+        <h6>Product Owner</h6>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
             <a href="https://github.com/GuillermoBasto" target="_blank" class="card-link"><img
@@ -211,7 +219,11 @@
   
       </div>
     </div>
-  
+  <div id="descripcion">
+    <h5>Nuestro proyecto</h5>
+    <p>Este proyecto consta de una página de e-commerce adecuada para una tienda en línea de maquillaje existente que se dedicaba a vender mediante instagram.</p>
+    <p>Desarrollamos la página mediante tecnologías como HTML, CSS, JavaScript, bootstrap, Java y bases de datos, para dicho proyecto todos los integrantes se involucraron en todas las partes del desarrollo.</p>
+  </div>
   </div>
   
   <br>
