--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -85,23 +85,26 @@
         </div>
         <div id="formContact">
             <!-- formulario  -->
+            <div class="alert alert-danger" id="alertError" style="display: none;" role="alert">
+            </div>
+            <br>
             <div class="d-grid gap-2 col-10 mx-auto">
-                <label for="exampleFormControlInput1" class="form-label"></label>
+                <label  for="exampleFormControlInput1" class="form-label">Nombre:</label>
                 <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
             </div>
             <div class="d-grid gap-2 col-10 mx-auto">
-                <label for="exampleFormControlInput1" class="form-label"></label>
+                <label for="exampleFormControlInput1" class="form-label">e-mail:</label>
                 <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
             </div>
             <div class="d-grid gap-2 col-10 mx-auto">
-                <label for="exampleFormControlInput1" class="form-label"></label>
-                <input type="text" class="form-control" id="exampleFormControlInput3" placeholder="Número telefónico">
+                <label for="exampleFormControlInput1" class="form-label">Télefono:</label>
+                <input type="tel" class="form-control" id="exampleFormControlInput3" placeholder="Formato: xx-xxxx-xxxx">
             </div>
             <div class="d-grid gap-2 col-10 mx-auto">
-                <label for="exampleFormControlTextarea1" class="form-label"></label>
+                <label for="exampleFormControlTextarea1" class="form-label">Escribe tu mensaje:</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                     placeholder="Escribe tu mensaje"></textarea>
-                <div class="d-grid gap-2 col-6 mx-auto">
+                <div class="d-grid gap-2 col-6 mx-auto"> 
                     <button class="btn btn-light" type="button" style="background-color: #EFCFCF;"
                         id="btnContactoEnviar">Enviar</button>
                 </div>
@@ -126,6 +129,7 @@
 
 
     <script src="../js/navbar.js"></script>
+    <script src="../js/contacto.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
     </script>
