--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -59,7 +59,7 @@
   </header>
 
   <main class="container-fluid text-center">
-    <div class="row" id="cardRow">
+    <div class="row d-flex justify-content-around" id="cardRow">
       <div class="card">
         <img src="../Fotos_nosotros/lore.jpeg" class="card-img-top" alt="..." width="286px" height="286px">
         <div class="card-body">
