--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -94,7 +94,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
                     placeholder="Escribe tu mensaje"></textarea>
                 <div class="d-grid gap-2 col-6 mx-auto"> 
-                    <button class="btn btn-light" type="button" style="background-color: #EFCFCF;"
+                    <button class="btn btn-light" type="submit" style="background-color: #EFCFCF;"
                         id="btnContactoEnviar">Enviar</button>
                 </div>
             </div>
@@ -149,7 +149,7 @@
     
     </footer>
 
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/contacto.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
