Se agregaron los links a los html en la navbar

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -42,10 +42,10 @@
             <a class="nav-link" href="#">Accesorios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="contact.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Nosotros</a>
+            <a class="nav-link" href="aboutus.html">Nosotros</a>
           </li>
         </ul>
       </div>
