Agregue a nivel clase el justify-content y borre estilos innecesarios que afectaban el height de las div

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -66,10 +66,10 @@
 
   <!-- MAIN PAGE -->
   <main class="container">
-    <div class="row">
+    <div class="row justify-content-around">
 
       <!-- INFO DE CONTACTO -->
-    <div class="text-center col-lg-4 col-sm-12 mt-2" id="contactUs">
+    <div class="text-center col-lg-4 col-sm-12 pt-2" id="contactUs">
       <br>
       <h5>Horarios de operación</h5>
       <p>Lunes - Viernes 10 AM - 5 PM GMT+6
@@ -81,7 +81,7 @@
     </div>
     
     <!-- FORMULARIO DE CONTACTO -->
-    <div id="formContact" class="col-lg-4 col-sm-12 pb-5">
+    <div id="formContact" class="col-lg-4 col-sm-12">
       <div class="alert alert-danger" id="alertError" style="display: none;" role="alert">
       </div>
       <br>
