Imagen de banner ajustada en contacto.html

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -57,17 +57,15 @@
   </nav>
   <br>
 
-  <header class="main-headers">
-    <h1 class="text-center"> <b> Contáctanos </b> </h1>
-  </header>
-  <img id="banner" src="../Fotos_pagina/Captura de pantalla_20221214_110014.png" width="100%" alt="">
-
-
-
   <!-- MAIN PAGE -->
   <main class="container">
     <div class="row justify-content-around">
-
+      <header class="main-headers">
+        <h1 class="text-center"> <b> Contáctanos </b> </h1>
+      </header>
+      <div id="banner">
+          
+      </div>
       <!-- INFO DE CONTACTO -->
     <div class="text-center col-lg-4 col-sm-12 pt-2" id="contactUs">
       <br>
