Coreccion de validacion y tamaño de columnas

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -67,7 +67,7 @@
           
       </div>
       <!-- INFO DE CONTACTO -->
-    <div class="text-center col-lg-4 col-sm-12 pt-2" id="contactUs">
+    <div class="text-center col-lg-5 col-sm-12 pt-2" id="contactUs">
       <br>
       <h5>Horarios de operación</h5>
       <p>Lunes - Viernes 10 AM - 5 PM GMT+6
@@ -79,7 +79,7 @@
     </div>
     
     <!-- FORMULARIO DE CONTACTO -->
-    <div id="formContact" class="col-lg-4 col-sm-12">
+    <div id="formContact" class="col-lg-5 col-sm-12">
       <div class="alert alert-danger" id="alertError" style="display: none;" role="alert">
       </div>
       <br>
@@ -95,7 +95,7 @@
       <br>
       <div class="box">
         <label for="exampleFormControlInput1" class="form-label">Télefono:</label>
-        <input type="tel" class="form-control" id="exampleFormControlInput3" placeholder="Formato: xx-xxxx-xxxx">
+        <input type="tel" maxlength="12" class="form-control" id="exampleFormControlInput3" placeholder="Formato: xx-xxxx-xxxx">
       </div>
       <br>
       <div class="box">
