Se agregaron pag de productos y linkearon a navbar

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -26,16 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Maquillaje</a>
+            <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Cuidado facial</a>
+            <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Brochas</a>
+            <a class="nav-link" href="./brochas.html">Brochas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Accesorios</a>
+            <a class="nav-link" href="./accesorios.html">Accesorios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacto</a>
