--- a/HTML/cuidadofacial.html
+++ b/HTML/cuidadofacial.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./brochas.html">Brochas</a>
+              <a class="nav-link" href="./Brochas.html">Brochas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./accesorios.html">Accesorios</a>
@@ -39,6 +39,9 @@
             <li class="nav-item">
               <a class="nav-link" href="aboutus.html">Nosotros</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./index.html">Inicio</a>
+              </li>
           </ul>    
         </div>
         <form class="d-flex" role="search">
@@ -48,7 +51,7 @@
       </div>
     </nav>
 
-    <h1>Página de inicio</h1>
+    <h1>Cuidado facial</h1>
 
     <footer class="text-center text-white" style="background-color:black;">
       <!-- Grid container -->
