--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,81 +1,96 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NAOM</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/footer.css">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>NAOM</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-xl bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" style="margin-right: 0;" href="index.html" ><img src="../Fotos_pagina/Original makeup.png" alt="" width="100px" ></a>
-        <div id="user-wrapper">
-          <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-          <a class="iconNav" href="#"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
-        </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./brochas.html">Brochas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./accesorios.html">Accesorios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="aboutus.html">Nosotros</a>
-            </li>
-          </ul>    
-        </div>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-dark" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
+  <link rel="stylesheet" href="/css/novedades.css">
+</head>
 
-    <h1>Página de inicio</h1>
+<body>
+  <nav class="navbar navbar-expand-xl bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img src="../Fotos_pagina/Original makeup.png"
+          alt="" width="100px"></a>
+      <div id="user-wrapper">
+        <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
+        <a class="iconNav" href="#"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./brochas.html">Brochas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./accesorios.html">Accesorios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.html">Nosotros</a>
+          </li>
+        </ul>
+      </div>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <div id="banner">
 
-    <footer class="text-center text-white" style="background-color:black;">
-      <!-- Grid container -->
-      <div class="container">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <span>Síguenos en redes</span>
-          <!-- Whatsapp -->
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-            style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
-  
-          <!-- Instagram -->
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-            style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
-          <br>
-  
-          <!-- METODOS DE PAGO -->
-          <span>Métodos de pago</span>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-            style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
-        </section>
-      </div>
-      <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
-        Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="../js/navbar.js"></script>
-  </body>
+  </div>
+  <div>
+    <h1 style="text-align: center;"><b>NOVEDADES</b></h1>
+  </div>
+  <div id="list-items"></div>
+
+  <footer class=" text-center text-white" style="background-color:black;">
+    <!-- Grid container -->
+    <div class="container">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <span>Síguenos en redes</span>
+        <!-- Whatsapp -->
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
+
+        <!-- Instagram -->
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
+        <br>
+
+        <!-- METODOS DE PAGO -->
+        <span>Métodos de pago</span>
+        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
+      </section>
+    </div>
+    <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
+      Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+  </script>
+  <script src="../js/navbar.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
