Se agrego efecto carrusel en el banner principal

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,10 +53,39 @@
       </form>
     </div>
   </nav>
-  <div id="banner">
-
+  <!--<div id="banner"></div>-->
+  <!--iniciocarrusel-->
+  <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active c-item">
+        <img src="/Fotos_pagina/pink-makeup-1611776547 (1).png" class="d-block w-100 c-img" alt="Slide1">
+        <div class="carousel-caption">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item c-item">
+        <img src="/Fotos-productos/FullSizeRender-3.jpg" class="d-block w-100 c-img" alt="slide2">
+      </div>
+      <div class="carousel-item c-item">
+        <img src="/Fotos-productos/FullSizeRender-5.jpg" class="d-block w-100 c-img" alt="slide3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div>
+  <!--fincarrusel-->
     <h1 style="text-align: center;"><b>NOVEDADES</b></h1>
   </div>
   <div id="list-items"></div>
