Agregar funcion para crear un nuevo objeto en formato JSON desde el formulario

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -9,9 +9,12 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
+    <script src="../js/formProducts.js" defer></script>
 </head>
 
 <body>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-xl bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img
@@ -55,35 +58,36 @@
             </form>
         </div>
     </nav>
-
+    <!-- Titulo formulario -->
     <h1 class="text-center">Agregar productos</h1>
-
+    
+    <!-- Formulario -->
     <div class="mx-2 my-2" id="formulario">
-        <form class="row justify-content-around">
+        <form class="row justify-content-around" action="" id="form">
             <div class="col-lg-7 form-outline mb-2">
-                <label class="form-label" htmlFor="form0"></label>
+                <label class="form-label" for="form0"></label>
                 <img id="editImage" width="200px" />
                 <input type="file" name="file" id="form0" class="form-control mt-2" accept="image/*" />
             </div>
             <div class="col-lg-7 form-outline mb-2">
-                <label class="form-label" htmlFor="form1">Nombre del producto</label>
+                <label class="form-label" for="form1">Nombre del producto</label>
                 <input type="text" name="name" id="form1" class="form-control" />
             </div>
             <div class="col-lg-7 form-outline mb-2">
-                <label class="form-label" htmlFor="form2">Precio</label>
+                <label class="form-label" for="form2">Precio</label>
                 <input type="number" step="0.01" name="price" id="form2" class="form-control" />
             </div>
             <div class="form-outline mb-4 col-lg-7">
-                <label class="form-label" htmlFor="form3">Descripción</label>
+                <label class="form-label" for="form3">Descripción</label>
                 <input type="text" name="description" id="form3" class="form-control" />
             </div>
             <div class="form-outline mb-4 col-lg-7">
-                <label class="form-label" htmlFor="form4">Productos disponibles</label>
+                <label class="form-label" for="form4">Productos disponibles</label>
                 <input type="number" step="0.01" name="stock" id="form4" class="form-control" />
             </div>
             <div class="form-outline mb-4 col-lg-7">
-                <button type="submit" class="btn btn-primary btn-block mx-2" data-bs-dismiss="modal">Agregar producto</button>
-                <button type="button" class="btn btn-secondary mx-2" data-bs-dismiss="modal">Cancelar</button>
+                <button type="submit" class="btn btn-primary btn-block mx-2">Agregar producto</button>
+                <button type="button" class="btn btn-secondary mx-2">Cancelar</button>
             </div>
         </form>
     </div>
