Se agregaron las validaciones del formulario de productos

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -62,6 +62,8 @@
     <h1 class="text-center">Agregar productos</h1>
     
     <!-- Formulario -->
+    <div class="alert alert-danger" role="alert" style="display: none;" id="alertError2">
+    </div>
     <div class="mx-2 my-2" id="formulario">
         <form class="row justify-content-around" action="" id="form">
             <div class="col-lg-7 form-outline mb-2">
