--- a/HTML/index.html
+++ b/HTML/index.html
@@ -88,7 +88,9 @@
   <!--fincarrusel-->
     <h1 style="text-align: center;"><b>NOVEDADES</b></h1>
   </div>
-  <div id="list-items"></div>
+  <img id="imagen"></img>
+  <div id="list-items">
+  </div>
 
   <footer class=" text-center text-white" style="background-color:black;">
     <!-- Grid container -->
@@ -114,6 +116,7 @@
     <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
       Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
     </div>
+    <a href="../html/formProductos.html">FORM</a>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
