--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,9 +7,11 @@
   <title>NAOM</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="/css/novedades.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
@@ -85,12 +87,25 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <!--fincarrusel-->
-    <h1 style="text-align: center;"><b>NOVEDADES</b></h1>
-  </div>
+  <!-- Productos -->
+    <div class="products-carousel row">
+      <h1 class="text-center">NOVEDADES</h1>
+      <div class="products-container">
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper" id="list-items">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  
+    <!-- </div>
   <img id="imagen"></img>
   <div id="list-items">
-  </div>
+  </div> -->
 
   <footer class=" text-center text-white" style="background-color:black;">
     <!-- Grid container -->
@@ -118,6 +133,7 @@
     </div>
     <a href="../html/formProductos.html">FORM</a>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
   </script>
