Se agrego holder de contraseña y confirmar contraseña, css

--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -66,8 +66,16 @@
             <div class="col-4">
               <input type="text" class="form-control" placeholder="Email:">
             </div>
+          
             <div class="col-4">
-              <input type="text" class="form-control" placeholder="Contraseña:">
+              <input type="tel" class="form-control" placeholder="Teléfono:">
+            </div>
+            <div class="row justify-content-around my-5">
+            <div class="col-4">
+              <input type="password" class="form-control" placeholder="Contraseña:">
+            </div>
+            <div class="col-4">
+              <input type="password" class="form-control" placeholder="Confirmar contraseña:">
             </div>
           </div>
           <div class="row justify-content-around my-5">
