Estilos en form de nuevos productos, ajuste a carouseles en index

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -18,7 +18,7 @@
       <a class="navbar-brand" href="index.html" style="margin-right: 0;"><img src="../Fotos_pagina/Original makeup.png" alt="" width="100px"></a>
       <div id="user-wrapper">
         <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-        <a class="iconNav" href="#"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+        <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
