--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,7 +21,7 @@
           alt="" width="100px"></a>
       <div id="user-wrapper">
         <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-        <a class="iconNav" href="#"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+        <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,8 @@
   </nav>
   <!--<div id="banner"></div>-->
   <!--iniciocarrusel-->
-  <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
+  
+  <div id="hero-carousel" class="carousel slide px-5" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -67,8 +68,8 @@
       <div class="carousel-item active c-item">
         <img src="/Fotos_pagina/pink-makeup-1611776547 (1).png" class="d-block w-100 c-img" alt="Slide1">
         <div class="carousel-caption">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>Brocha</h5>
+          <p>La mejor brocha de mexico.</p>
         </div>
       </div>
       <div class="carousel-item c-item">
