--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -8,7 +8,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/formProducts.css">
     <script src="../js/formProducts.js" defer></script>
 </head>
 
@@ -21,8 +21,8 @@
             <div id="user-wrapper">
                 <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px"
                         id="shoppingCart"></a>
-                <a class="iconNav" href="#"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px"
-                        id="userIcon"></a>
+                <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" 
+                    id="userIcon"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -58,7 +58,7 @@
         </div>
     </nav>
     <!-- Titulo formulario -->
-    <h1 class="text-center">Agregar productos</h1>
+    <h1 class="my-5 text-center">Agregar productos</h1>
     
     <!-- Formulario -->
     <div class="alert alert-danger" role="alert" style="display: none;" id="alertError2">
@@ -67,7 +67,8 @@
         <form class="row justify-content-around" action="" id="form">
             <div class="col-lg-7 form-outline mb-2 text-center">
                 <label class="form-label" for="form0"></label>
-                <img id="prevImg" width="200px" />
+                <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
+                <p class="mt-1">La imagen debe de una altura y ancho iguales. Ej. 160x160</p>
                 <input type="file" name="file" id="form0" onchange="encodeImageFileAsURL(this)" class="form-control mt-2" />
             </div>
             <div class="col-lg-7 form-outline mb-2">
@@ -87,8 +88,8 @@
                 <input type="number" step="0.01" name="stock" id="form4" class="form-control" />
             </div>
             <div class="form-outline mb-4 col-lg-7">
-                <button type="submit" class="btn btn-primary btn-block mx-2">Agregar producto</button>
-                <button type="button" class="btn btn-secondary mx-2">Cancelar</button>
+                <button type="submit" class="btn btn-primary btn-block mx-2" id="btnProduct">Agregar producto</button>
+                <button type="button" class="btn btn-secondary mx-2" id="btnProductCancel">Cancelar</button>
             </div>
         </form>
     </div>
