Responsiva la pagina de registro, y se acomodaron las fotos de nosotros(tamanio)

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -61,7 +61,7 @@
   <main class="container-fluid text-center">
     <div class="row d-flex justify-content-around" id="cardRow">
       <div class="card">
-        <img src="../Fotos_nosotros/lore.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/lore.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Lorena Rodríguez</h5>
           <h6>Developer Team</h6>
@@ -81,7 +81,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/adrian.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/adrian.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Adrian Arguello</h5>
           <h6>Developer Team</h6>
@@ -102,7 +102,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/ivan.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/ivan.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Ivan Campos</h5>
           <h6>Developer Team</h6>
@@ -122,7 +122,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/eduardo.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/eduardo.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Eduardo Cruz</h5>
           <h6>Developer Team</h6>
@@ -142,7 +142,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/johanna.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/johanna.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Johanna Villegas</h5>
           <h6>Developer Team</h6>
@@ -165,7 +165,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/josue.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/josue.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Josue Torres</h5>
           <h6>SCRUM Master</h6>
@@ -188,7 +188,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/maria.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/maria.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">María González</h5>
           <h6>Developer Team</h6>
@@ -209,7 +209,7 @@
       </div>
   
       <div class="card">
-        <img src="../Fotos_nosotros/memo.png" class="card-img-top" alt="..." width="286px" height="286px">
+        <img src="../Fotos_nosotros/memo.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
           <h5 class="card-title">Guillermo Basto</h5>
           <h6>Product Owner</h6>
