--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -17,7 +17,7 @@
   <!-- NAVIGATION BAR -->
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html" style="margin-right: 0;" ><img src="../Fotos_pagina/Original makeup.png" alt=""
+      <a class="navbar-brand" href="../index.html" style="margin-right: 0;" ><img src="../Fotos_pagina/Original makeup.png" alt=""
           width="100px"></a>
       <div id="user-wrapper">
         <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
