--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-xl bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img
+            <a class="navbar-brand" style="margin-right: 0;" href="../index.html"><img
                     src="../Fotos_pagina/Original makeup.png" alt="" width="100px"></a>
             <div id="user-wrapper">
                 <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px"
