--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-xl bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" style="margin-right: 0;" href="index.html" ><img src="../Fotos_pagina/Original makeup.png" alt="" width="100px" ></a>
+        <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Original makeup.png" alt="" width="100px" ></a>
         <div id="user-wrapper">
           <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
           <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
